# jdcloud-skills

./: .bashrc  .env.example  .gitignore  .gitmessage.txt  .pre-commit-config.yaml  AGENTS.md  BACKLOG.md  QUICK_START.md  QUICK_START_EN.md  README.md  README_EN.md  SKILLS_ROADMAP.md  conftest.py  fix-worker-output.md  jdcloud-skill-generator-guide.md  jdcloud-skill-template.md  k8s_cruise_report.py  progress.md  pyproject.toml
docs/: GCL_ADOPT_EN.md  GCL_RETROSPECTIVE.md  SDK_VERSION_LOCKING.md  failure-patterns.md
jdcloud-aiops-cruise/: .env.example  SKILL.md
jdcloud-alert-intelligence/: SKILL.md
jdcloud-apigateway-ops/: SKILL.md
jdcloud-arch-advisor/: SKILL.md
jdcloud-audit-ops/: QUICK_REFERENCE.md  SKILL.md
jdcloud-billing-ops/: SKILL.md
jdcloud-cdn-ops/: SKILL.md
jdcloud-cert-ops/: SKILL.md
jdcloud-clb-ops/: SKILL.md
jdcloud-cloudmonitor-ops/: SKILL.md  eval_queries.md
jdcloud-disk-ops/: QUICK_REFERENCE.md  SKILL.md
jdcloud-dns-ops/: SKILL.md
jdcloud-eip-ops/: SKILL.md
jdcloud-elasticsearch-ops/: SKILL.md
jdcloud-fc-ops/: QUICK_REFERENCE.md  SKILL.md
jdcloud-iam-ops/: SKILL.md
jdcloud-jcq-ops/: SKILL.md
jdcloud-kms-ops/: SKILL.md
jdcloud-kubernetes-ops/: SKILL.md
jdcloud-link-cruise/: SKILL.md
jdcloud-logservice-ops/: SKILL.md
jdcloud-mongodb-ops/: SKILL.md
jdcloud-mysql-ops/: SKILL.md
jdcloud-nat-ops/: SKILL.md
jdcloud-oss-ops/: SKILL.md
jdcloud-postgresql-ops/: SKILL.md
jdcloud-redis-ops/: SKILL.md
jdcloud-routines-ops/: SKILL.md
jdcloud-skill-generator/: SKILL.md
jdcloud-tag-audit-ops/: SKILL.md
jdcloud-topo-discovery/: SKILL.md
jdcloud-vm-ops/: README.md  (+5 more)
(+649 files in other folders)
